# Spotify-Data-Lake-house

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: data_model_gold_layer.md  data_model_silver_layer.md  data_raw_bronze_layer.md  infra.md  src.md
infra/: main.tf  outputs.tf  providers.tf  variables.tf
infra/modules/compute/: main.tf  outputs.tf  variables.tf
infra/modules/identity/: main.tf  outputs.tf  variables.tf
infra/modules/registry/: main.tf  outputs.tf  variables.tf
infra/modules/storage/: main.tf  outputs.tf  variables.tf
scripts/: deploy.sh
src/: config.py  fetch_tracks.py  main.py  reset_api_data.py  verify_setup.py  verify_silver.py  verify_spotify.py  verify_state.py
src/connectors/: lastfm.py  spotify.py  storage.py
src/core/: state.py
src/domain/: schemas.py
src/pipelines/: backfill.py  dump_enrichment.py  enrichment.py  gold.py  ingestion.py  lastfm_enrichment.py  silver.py
tests/: test_schemas.py  test_silver.py  test_state.py
